# gathering-the-magic

./: .gitignore  Cargo.toml  LICENSE.txt  index.html  readme.md
src/: card.rs  card_database.rs  image.rs  image_camera.rs  image_card_extraction.rs  image_hash.rs  main.rs  search.rs  text_extraction.rs  websocket.rs
