[package]
name = "gathering_the_magic"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
strsim = "0.11.1"
lazy_static = "1.4.0"
opencv = { version = "0.91.2", features = ["clang-runtime"] }
anyhow = "1.0.82"
tokio-stream = "0.1.15"
glob = "0.3.1"
rayon = "1.10.0"
leptess = "0.14.0"
# scryers = {path = "../scryers"}
scryers = "^0.1"
